[tool.poetry]
name = "python-therapy-nlp-pipeline"
version = "0.1.0"
description = "A modular Python-based pipeline for extracting meaningful insights from therapy session transcripts"
authors = ["Matthew Aberham <matthew.aberham@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/username/python-therapy-nlp-pipeline"
keywords = ["nlp", "therapy", "sentiment-analysis", "topic-modeling", "data-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pandas = "~2.0.3"
nltk = "~3.8.1"
gensim = "~4.3.2"
matplotlib = "~3.7.3"
seaborn = "~0.12.2"
scikit-learn = "~1.3.2"
toml = "^0.10.2"
# LLM dependencies (optional)
openai = {version = "^0.28.1", optional = true}
anthropic = {version = "^0.8.1", optional = true}
requests = "^2.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.1.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
therapy-nlp = "src.pipeline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
llm = ["openai", "anthropic"]
